# LakeFS

./: .clang-format  .gitignore  LICENSE.md  REUSE.toml  build.zig  flake.lock.license  flake.nix  lakefs.conf  lakefs.spec  makefile  meson.build  meson.options  readme.md  shell.nix
.github/workflows/: format.yml  reuse.yml  testing.yml
LICENSES/: LicenseRef-SQLite.txt
cli/: meson.build
cli/src/: command_interface.c  command_interface.d  commands.d  ioctl.c  ioctl.d  main.d
docs/: lakefs-cli.rst  lakefs-ctl.rst  lakefs-ctl.rst.in  lakefs.conf.rst  lakefs.conf.rst.in  lakefs.rst  lakefs.rst.in  meson.build
filesystem/: Cargo.lock.license  Cargo.toml  meson.build
filesystem/src/: ast.cpp  ast.hpp  backups.cpp  backups.hpp  command_interface.h  config.cpp  config.hpp  control.cpp  control.hpp  db.cpp  db.hpp  fs.cpp  fs.hpp  ioctl.h  log.hpp  main.cpp  main.rs  metadata.h.in  parser.cpp  parser.hpp  utilities.cpp  utilities.hpp
filesystem/src/pch/: pch.hpp
filesystem/src/query_lang/: ast.cpp  ast.hpp  parser.cpp  parser.hpp
filesystem/tests/: config.cpp  parsing.cpp  query_generation.cpp  utilities.cpp
filesystem/tests/vendors/: sqlite.cpp
integration_tests/: adv_query.sh  deletion.sh  folder.sh  meson.build  multiple_tags.sh  querying.sh  reading.sh  relinking.sh  test_cli_control.sh  test_core.sh  writing.sh
packaging/freebsd/: Makefile  distinfo  pkg-descr  pkg-plist  pkg-plist.license
packaging/rhel/: lakefs.spec
query-lang/: meson.build
query-lang/src/: ast.hpp
query-lang/tests/: parsing.cpp
src/: db.cpp  db.hpp  db.zig  fs.cpp  fs.hpp  fuse.zig  main.cpp  zlake.zig
src/sqlite/: sqlite3.h
tests/: catch.hpp
tests/vendors/: sqlite.cpp
